--- a/test.html
+++ b/test.html
@@ -1,2 +1,3 @@
 <h1>My First Website</h1>
-<p>My best superhero is Batman</p>
+<p>My best superhero is <span style="
+     color: gold">Batman</span></p>
