--- a/test.html
+++ b/test.html
@@ -2,3 +2,8 @@
 <p>My best superhero is <span style="
      color: gold">Batman</span></p>
 <!-- I am legit the best programmer ever-->
+<form>
+  <label for="brightness"> Brightness Control</label>
+  <input id="brightness" name="brightness" type="range" min="0" max="100" step="1">
+</form>
+<img src="d04e606f-82cb-4fa0-a5ba-282e3e95c072.jpg">
