--- a/test.html
+++ b/test.html
@@ -21,6 +21,7 @@
             <input type="password" placeholder="Input Password Here">
         </div>
     </div>
+    <input type="color"/>
     
 </body>
     
