--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <input type="color"/>
-    
+    <textarea placeholder="What is your problem?"></textarea>
 </body>
     
 </html>
