--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html> 
     <head>
         <meta charset="utf-8">
+        <link href="Test.css" rel="stylesheet">
         <title>Dapo's Website</title>
     </head>
     <body>
@@ -101,11 +102,6 @@
             <textarea placeholder="What is your problem?"></textarea>
         </form>
         </div>
-        <style>
-            body{
-                background-color: gold;
-            }
-        </style>
 </body>
     
 </html>
