Added a background image

--- a/test.html
+++ b/test.html
@@ -19,10 +19,10 @@
                 </ul>
             </div>
         
-            <div>
+            <div id="schedule">
                 <h2>What time would Dapo Be Available to mentor Jerry?</h2>
-                <input type="date"/>
-                <input type="time"/>
+                <div><input type="date"/></div>
+                <div><input type="time"/></div>
             </div>
             <div>
                 <h2>What Dapo would be teachin Jerry?</h2>
