--- a/test.html
+++ b/test.html
@@ -34,9 +34,9 @@
                     <li>Why Dapo is the best</li>
                 </ol>
             </div>
-            <div class="tile"> 
+            <div id="picture" class="tile"> 
                 <span>Proof of Dapo's Handsomeness</span>
-                <img src="d04e606f-82cb-4fa0-a5ba-282e3e95c072.jpg" width="320" height="180">
+                <span><img src="d04e606f-82cb-4fa0-a5ba-282e3e95c072.jpg" width="200" height="120"></span>
             </div>
         
             <div class="tile">
