--- a/test.html
+++ b/test.html
@@ -20,12 +20,12 @@
                 </ul>
             </div>
         
-            <div id="schedule" class="tile">
+            <div id="schedule" class="tile gray">
                 <h2>What time would Dapo Be Available to mentor Jerry?</h2>
                 <div><input type="date"/></div>
                 <div><input type="time"/></div>
             </div>
-            <div class="tile">
+            <div class="tile Red">
                 <h2>What Dapo would be teachin Jerry?</h2>
                 <ol>
                     <li>How to program</li>
