--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html> 
     <head>
         <meta charset="utf-8">
-        <link href="main.css" rel="stylesheet">
+        <link href="main.css" rel="stylesheet" type="text/css">
         <title>Dapo's Website</title>
     </head>
     <body>
@@ -35,12 +35,12 @@
                     <li>Why Dapo is the best</li>
                 </ol>
             </div>
-            <div class="tile blue"> 
+            <div class="tile-double blue"> 
                 <span>Proof of Dapo's Handsomeness</span>
                 <span><img src="d04e606f-82cb-4fa0-a5ba-282e3e95c072.jpg" width="200" height="120"></span>
             </div>
         
-            <div class="tile white">
+            <div class="tile-double white">
                 <table>
                     <thead>
                         <tr>
